* Revert `lastNormalized` usage in match() because of issues when match() calls select(). [jddalton]

* Give compileSelector() ability to process custom code before and after the primary iterator via `header` and `footer` properties of the callbacks return object. [jddalton]

* Merge compileGroup() and compileSingle() into compileSelector(). [jddalton]

* Ensure `lastNormalized` isn't modifed by selector optimizations in select_regular(). [jddalton]

* Make `re_optimizeByRemoval` use `str_identifier`, fork byClass()/byName()/byTag() based on feature tests, and remove compiled nodeType checks by making byTag() filter non-elements. [Diego Perini, jddalton]

* Revert `NATIVE_SLICE_PROTO` feature test to check first element of the array because Safari 2.0 returns an Array with undefined values in it. [Diego Perini]

* Make compileSelector() pass `match, source, mode, selector` to callbacks. [jddalton]

* Add `HOST_DOC` to ensure `ctx_doc` is reset when not passing a context to match()/select(). [jddalton]

* Revert to character comparisons using `@` for non-element nodes. [Diego Perini]

* Add persisted `lastNormalized` variable, remove `normSelector` and `origSelector` from select_regular() and match(). [jddalton]

* Make match() return false if an element is not provided. [jddalton]

* Move regexps off the `Optimize` object and ensure context is only matched in a selector where it's assumed. [jddalton]
  For example element `<div><li><em>foo</em></li></div>` would return results for select('> li em', div) but not select('div li em', div).

* unit test: Update Slick tests and add Slick YUI specs. [jddalton]

* Tweak byName() to maintain its speed and still pass unit tests. [jddalton]

* Add support for the CSS3 lang pseudo-class. [Diego Perini, jddalton]

* Escape quotes when compiling attribute, `:not`, and `:contains` selectors. [jddalton]

* Standardize variable names with prefixes: